--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -1,54 +1,75 @@
-<center></center><img src="https://img.mailinblue.com/2102565/images/content_library/original/6650b51e203fef16b680723f.png" alt="https://world-fr.openfoodfacts.org/" width="570" border="0" /></center>
+
+
+<center>
+  <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20FR.png" alt="Nutritional Epidemiology Research Team">
+</center>
+
 <div>
    <p>Nous sommes heureux d'annoncer&nbsp;<strong>le lancement du Nutri-Score v2 sur Open Food Facts</strong>, la première mise à jour majeure du système d'étiquetage nutritionnel.</p>
    <p>Ceci est disponible dès aujourd'hui sur notre application mobile Open Food Facts pour Android et iPhone, ainsi que sur notre site Web, conformément à notre longue tradition de premières novatrices.</p>
 </div>
-<h1 class="title-2 emphasized-title"><strong>Qu'est-ce que le Nutri-Score ?</strong></h1>
+<h2 class="title-2 emphasized-title">
+    <strong>Qu'est-ce que le Nutri-Score ?</strong>
+</h2>
+<img width="200px" src="https://img.mailinblue.com/2102565/images/content_library/original/6650ab73203fef16b6806fad.png" alt="Qu'est-ce que le Nutri-Score ?">
 <p>Nutri-Score est un logo qui a pour but de vous informer sur la qualité nutritionnelle des aliments.&nbsp;Le code couleur va du vert foncé (A) pour les produits les plus sains au rouge foncé (E) pour les moins sains.</p>
-<a class="button round secondary small" href="/nutriscore"><a href="https://eren.univ-paris13.fr/index.php/en/"><u>Nutritional Epidemiology Research Team</u></a></a>
-<h1 class="title-2 emphasized-title"><strong>Pourquoi le Nutri-Score évolue-t-il ?</strong></h1>
+<a class="button round secondary small" href="/nutriscore">Lisez notre page explicative sur le Nutri-Score</a>
+
+<h2 class="title-2 emphasized-title">
+    <strong>Pourquoi le Nutri-Score évolue-t-il ?</strong>
+</h2>
+
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="https://blog.openfoodfacts.org/fr/kit-de-presse-nutriscore-v2">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20FR.png" alt="Pourquoi un nouvel algorithme">
 <p>La formule du Nutri-Score évolue pour fournir de meilleures recommandations :</p>
 <ul>
-   <li><strong>Better evaluate all drinks</strong>The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
-   <li><strong>Better ranking of drinks</strong>Sugar content is better taken into account and favors low-sugar drinks.&nbsp;Sweeteners will also be penalized:&nbsp;diet sodas will be downgraded from a B rating to between C and E.&nbsp;Water remains the recommended drink.</li>
-   <li><strong>Salt and sugar penalized</strong>Products that are too sweet or too salty will see their rating further downgraded.</li>
-   <li><strong>Prioritization of oils and fish</strong>The rating of some fatty fish and oils rich in good fats will improve.</li>
-   <li><strong>Limit red meat</strong>Red meat consumption should be limited.&nbsp;This is why poultry will be comparatively better ranked.</li>
+   <li><strong>Mieux évaluer toutes les boissons</strong>&nbsp;-&nbsp;Les scores comparatifs du lait,&nbsp;des boissons lactées sucrées,&nbsp;et des boissons végétales ont été mieux différenciés dans le nouvel algorithme.</li>
+   <li><strong>Meilleur classement des boissons</strong>&nbsp;-&nbsp;La teneur en sucre est mieux prise en compte et privilégie les boissons à faible teneur en sucre.&nbsp;Les édulcorants seront également pénalisés :&nbsp;les sodas light seront rétrogradés d'une note B à une note comprise entre C et E.&nbsp;L'eau reste la boisson recommandée.</li>
+   <li><strong>Sel et sucre pénalisés</strong>&nbsp;-&nbsp;Les produits trop sucrés ou trop salés verront leur note encore dégradée.</li>
+   <li><strong>Priorisation des huiles et des poissons</strong>&nbsp;-&nbsp;La notation de certains poissons gras et des huiles riches en bonnes graisses s'améliorera.</li>
+   <li><strong>Limiter la viande rouge</strong>&nbsp;-&nbsp;La consommation de viande rouge doit être limitée.&nbsp;C'est pourquoi la volaille sera comparativement mieux classée.</li>
 </ul>
-<h1 class="title-2 emphasized-title"><strong>Comment faire la différence entre l'ancien Nutri-Score et le nouveau calcul ?</strong></h1>
+
+<h2 class="title-2 emphasized-title">
+    <strong>Comment faire la différence entre l'ancien Nutri-Score et le nouveau calcul ?</strong>
+</h2>
+
 <p>Désormais,&nbsp;le logo peut afficher une &quot;Nouveau calcul&quot; mention pour préciser que c'est bien le nouveau calcul.</p>
-<h1 class="title-2 emphasized-title"><strong>Où trouver le nouveau calcul du Nutri-Score ?</strong></h1>
+
+<h2 class="title-2 emphasized-title"><strong>Où trouver le nouveau calcul du Nutri-Score ?</strong></h2>
 <p>Le Nutri-Score est utilisé dans plusieurs pays :&nbsp;Allemagne,&nbsp;Belgique,&nbsp;Espagne,&nbsp;France,&nbsp;Luxembourg,&nbsp;les Pays-Bas,&nbsp;et la Suisse.</p>
 <p>Les fabricants ont jusqu'en **2026** au plus tard **pour remplacer** l'ancien calcul par le nouveau.</p>
 <p>Sans attendre,&nbsp;vous pouvez déjà retrouver le nouveau calcul dans l'application Open Food Facts,&nbsp;même si les fabricants n'ont pas mis à jour le score.</p>
-<h1 class="title-2 emphasized-title"><strong>Ce qui ne change pas</strong></h1>
+
+<h2 class="title-2 emphasized-title"><strong>Ce qui ne change pas</strong></h2>
 <p>Le Nutri-Score est un score conçu pour mesurer la qualité nutritionnelle.&nbsp;Il est complémentaire du groupe NOVA sur les aliments ultra-transformés (également présent dans l'application).</p>
 <p>Pour les fabricants, l’affichage du Nutri-Score reste facultatif.</p>
-<h1 class="title-2 emphasized-title">L’algorithme évolue pour être plus conforme aux recommandations alimentaires</h1>
+
+<h2 class="title-2 emphasized-title">L’algorithme évolue pour être plus conforme aux recommandations alimentaires</h2>
 <p>"Ce nouvel algorithme permettra d'améliorer l'efficacité du Nutri-score dans la classification des aliments et des boissons, en ligne avec les principales recommandations alimentaires des pays européens, et d'orienter les consommateurs vers des choix éclairés et bons pour leur santé"&nbsp;</>explique la Direction générale de la santé (France).</p>
 <p><strong>✅Critères renforcés</strong>&nbsp;</p>
-<p>The EREN* scientific team has completely&nbsp;<strong>reviewed the algorithm</strong>&nbsp;used to calculate the Nutri-Score, resulting in more scores that better reflect the nutritional quality of products,&nbsp;<strong>with many of them losing a grade</strong>.</p>
+<p>L'équipe scientifique d'EREN* a complètement&nbsp;<strong>revu l'algorithme</strong>&nbsp;utilisé pour calculer le Nutri-Score, ce qui a donné lieu à davantage de scores reflétant mieux la qualité nutritionnelle des produits,&nbsp;<strong>avec beaucoup d'entre eux perdant une note</strong>.</p>
 <p><strong>✅&nbsp;</strong><strong>Bannière distinctive pour nouveau calcul</strong>&nbsp;</p>
 <p>La Nutri-Score v2 aura <strong>une bannière distinctive</strong> indiquant qu'il a été calculé à l'aide <strong>de la nouvelle formule</strong>. Bien que la bannière ne soit pas obligatoire sur les emballages, elle garantit que le Nutri-Score a été correctement calculé.</p>
-<img src="https://img.mailinblue.com/2102565/images/content_library/original/6650b62c815ba7d4d20aba8b.jpeg" alt="" width="576" border="0" />
-<h1 class="title-2 emphasized-title">Où pouvez-vous trouver le Nutri-Score V2 ?</h1>
+<img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/before-after-fr.png" alt="" width="600px" border="0" />
+<h2 class="title-2 emphasized-title">Où pouvez-vous trouver le Nutri-Score V2 ?</h1>
 <ul>
    <li><strong>Le site Web Open Food Facts :</strong>&nbsp;Vous pouvez trouver Nutri-Score v2 sur les pages produits de notre site Web,&nbsp;<a href="https://fr.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
    <li><strong>L'application mobile officielle Open Food Facts :</strong>&nbsp;Le Nutri-Score v2 est également disponible aujourd'hui sur&nbsp;<a href="https://world.openfoodfacts.org/open-food-facts-mobile-app?utm_source=off&amp;utf_medium=web&amp;utm_campaign=search_and_links_promo_en"><u>notre app mobile</u></a>, vous permettant de scanner des produits et de voir leurs scores nutritionnels instantanément.</li>
    <li><strong>La plateforme gratuite Open Food Facts pour les professionnels de l'alimentation :</strong>&nbsp;Nous avons mis à jour&nbsp;<a href="https://world.pro.openfoodfacts.org/"><u>notre plate-forme pour les professionnels</u></a>&nbsp;pour inclure le Nutri-Score v2,  permettre aux fabricants et aux détaillants d’aliments d’améliorer la qualité nutritionnelle de leurs produits.</li>
-   <li><strong>Our OpenData Exports:</strong>&nbsp;Nutri-Score v2 is also available in&nbsp;<a href="https://fr.openfoodfacts.org/data"><u>our data exports</u></a>, allowing researchers, journalists, and other stakeholders to access this new nutritional information.</li>
-   <li><strong>Pour plus de 200 applications web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils à&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">prend en charge la migration dans ce tutoriel</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
+   <li><strong>Nos exports OpenData :</strong>&nbsp;Nutri-Score v2 est également disponible en&nbsp;<a href="https://world.openfoodfacts.org/data"><u>nos exports de données</u></a>, permettant aux chercheurs, journalistes et autres parties prenantes d'accéder à ces nouvelles informations nutritionnelles.</li>
+   <li><strong>Pour les 200+ applications Web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils pour&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/reference/api-tutorials/get-the-nutriscore/" target="_blank">soutenir la migration dans ce tutoriel</a>. Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
 </ul>
-<h1 class="title-2 emphasized-title">Pour les journalistes</h1>
+<h2 class="title-2 emphasized-title">Pour les journalistes</h1>
 <ul>
    <li><strong>Si vous&rsquo;abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse autour du Nutri-Score V2 et d'Open Food Facts. Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay. Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
-<a class="button round secondary small" href="https://blog.openfoodfacts.org/fr/kit-de-presse-nutriscore-v2">Dossier de presse Nutri-Score v2</a>
+<!--<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/nutriscore-v2-presskit">Nutri-Score v2 presskit</a>-->
 
-<h1 class="title-2 emphasized-title">Open Food Facts et le Nutri-Score</h1>
+<h2 class="title-2 emphasized-title"><strong>Pour plus de 200 applications web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils à&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">prend en charge la migration dans ce tutoriel</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></h1>
 <h4>Open Food Facts est un partisan historique du Nutri-Score depuis 2014.&nbsp;</h4>
-
+<img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20FR.png" alt="Open Food Facts et le Nutri-Score">
 <a class="button round secondary small" href="/open-food-facts-et-le-nutriscore">Lire notre page Open Food Facts et le Nutri-Score</a>
 
 <p>Nous pensons que Nutri-Score v2 est&nbsp;<strong>un outil précieux</strong>&nbsp;pour les consommateurs, les fabricants de produits alimentaires et les détaillants.&nbsp;</p>
@@ -56,8 +77,54 @@
 <p><strong>✔ un résumé clair et concis de la qualité nutritionnelle</strong>&nbsp;des produits,&nbsp;</p>
 <p><strong>✔&nbsp;</strong>aider les consommateurs à faire des choix éclairés</p>
 <p><strong>✔&nbsp;</strong>encourager les industriels de l'agroalimentaire à améliorer le profil nutritionnel de leurs produits.</p>
-<h1 class="title-2 emphasized-title">Certains des changements en un coup d'œil</h1>
-<img src="https://img.mailinblue.com/2102565/images/content_library/original/6650ab6c6cb5f9c9c2293e2e.png" alt="" width="570" border="0" />
-&shy;
-<img src="https://img.mailinblue.com/2102565/images/content_library/original/6650ab73203fef16b6806fad.png" alt="" width="570" border="0" />
-&shy;
+<h2 class="title-2 emphasized-title">Certains des changements en un coup d'œil</h2>
+
+
+    <h2>&shy;</h2>
+
+    <h3>Laits</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20whole%20-%20FR.png" alt="Nutri-Score pour le lait entier">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20FR.png" alt="Nutri-Score pour le lait écrémé">
+        </div>
+    </div>
+
+    <h3>Boissons</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20FR.png" alt="Nutri-Score pour les jus de fruits">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20FR.png" alt="Nutri-Score pour l'eau">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20FR.png" alt="Nutri-Score pour les boissons sucrées">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20FR.png" alt="Nutri-Score pour le cola sans sucre">
+        </div>
+    </div>
+
+    <h3>Boissons sucrées et aromatisées</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20FR.png" alt="Nutri-Score pour les yaourts à boire">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20FR.png" alt="Dossier de presse Nutri-Score v2">
+        </div>
+    </div>
+
+    <h3>Huiles</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20FR.png" alt="Nutri-Score pour l'huile d'olive">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20FR.png" alt="Nutri-Score pour l'huile de tournesol">
+        </div>
+    </div>
+
+    <h3>Volaille et poisson</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Poultry%20-%20FR.png" alt="Nutri-Score pour les volailles">
+            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Fatty%20fish%20-%20FR.png" alt="Nutri-Score pour les poissons gras">
+        </div>
+    </div>
+
+<!--
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
+-->
