--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -1,7 +1,7 @@
 
 
 <center>
-  <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20FR.png" alt="Nutritional Epidemiology Research Team">
+  <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20FR.png" alt="Nutritional Epidemiology Research Team">
 </center>
 
 <div>
@@ -19,8 +19,8 @@
     <strong>Pourquoi le Nutri-Score évolue-t-il ?</strong>
 </h2>
 
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="https://blog.openfoodfacts.org/fr/kit-de-presse-nutriscore-v2">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20FR.png" alt="Pourquoi un nouvel algorithme">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="https://blog.openfoodfacts.org/fr/kit-de-presse-nutriscore-v2">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20FR.png" alt="Pourquoi un nouvel algorithme">
 <p>La formule du Nutri-Score évolue pour fournir de meilleures recommandations :</p>
 <ul>
    <li><strong>Mieux évaluer toutes les boissons</strong>&nbsp;-&nbsp;Les scores comparatifs du lait,&nbsp;des boissons lactées sucrées,&nbsp;et des boissons végétales ont été mieux différenciés dans le nouvel algorithme.</li>
@@ -51,7 +51,7 @@
 <p>L'équipe scientifique d'EREN* a complètement&nbsp;<strong>revu l'algorithme</strong>&nbsp;utilisé pour calculer le Nutri-Score, ce qui a donné lieu à davantage de scores reflétant mieux la qualité nutritionnelle des produits,&nbsp;<strong>avec beaucoup d'entre eux perdant une note</strong>.</p>
 <p><strong>✅&nbsp;</strong><strong>Bannière distinctive pour nouveau calcul</strong>&nbsp;</p>
 <p>La Nutri-Score v2 aura <strong>une bannière distinctive</strong> indiquant qu'il a été calculé à l'aide <strong>de la nouvelle formule</strong>. Bien que la bannière ne soit pas obligatoire sur les emballages, elle garantit que le Nutri-Score a été correctement calculé.</p>
-<img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/before-after-fr.png" alt="" width="600px" border="0" />
+<img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/before-after-fr.png" alt="" width="600px" border="0" />
 <h2 class="title-2 emphasized-title">Où pouvez-vous trouver le Nutri-Score V2 ?</h1>
 <ul>
    <li><strong>Le site Web Open Food Facts :</strong>&nbsp;Vous pouvez trouver Nutri-Score v2 sur les pages produits de notre site Web,&nbsp;<a href="https://fr.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
@@ -60,16 +60,16 @@
    <li><strong>Nos exports OpenData :</strong>&nbsp;Nutri-Score v2 est également disponible en&nbsp;<a href="https://world.openfoodfacts.org/data"><u>nos exports de données</u></a>, permettant aux chercheurs, journalistes et autres parties prenantes d'accéder à ces nouvelles informations nutritionnelles.</li>
    <li><strong>Pour les 200+ applications Web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils pour&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/reference/api-tutorials/get-the-nutriscore/" target="_blank">soutenir la migration dans ce tutoriel</a>. Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
 </ul>
-<h2 class="title-2 emphasized-title">Pour les journalistes</h1>
+<h2 class="title-2 emphasized-title">Pour les journalistes</h2>
 <ul>
-   <li><strong>Si vous&rsquo;abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse autour du Nutri-Score V2 et d'Open Food Facts. Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay. Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
+   <li><strong>Si vous&rsquo;abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse autour du Nutri-Score V2 et d'Open Food Facts. <!--Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay.--> Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
 <!--<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/nutriscore-v2-presskit">Nutri-Score v2 presskit</a>-->
-
-<h2 class="title-2 emphasized-title"><strong>Pour plus de 200 applications web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils à&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">prend en charge la migration dans ce tutoriel</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></h1>
+<h2 class="title-2 emphasized-title">Pour les réutilisateurs</h2>
+<strong>Pour plus de 200 applications web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils à&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">prend en charge la migration dans ce tutoriel</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a>
 <h4>Open Food Facts est un partisan historique du Nutri-Score depuis 2014.&nbsp;</h4>
-<img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20FR.png" alt="Open Food Facts et le Nutri-Score">
+<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20FR.png" alt="Open Food Facts et le Nutri-Score">
 <a class="button round secondary small" href="/open-food-facts-et-le-nutriscore">Lire notre page Open Food Facts et le Nutri-Score</a>
 
 <p>Nous pensons que Nutri-Score v2 est&nbsp;<strong>un outil précieux</strong>&nbsp;pour les consommateurs, les fabricants de produits alimentaires et les détaillants.&nbsp;</p>
@@ -85,46 +85,46 @@
     <h3>Laits</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20whole%20-%20FR.png" alt="Nutri-Score pour le lait entier">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20FR.png" alt="Nutri-Score pour le lait écrémé">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20whole%20-%20FR.png" alt="Nutri-Score pour le lait entier">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20FR.png" alt="Nutri-Score pour le lait écrémé">
         </div>
     </div>
 
     <h3>Boissons</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20FR.png" alt="Nutri-Score pour les jus de fruits">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20FR.png" alt="Nutri-Score pour l'eau">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20FR.png" alt="Nutri-Score pour les boissons sucrées">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20FR.png" alt="Nutri-Score pour le cola sans sucre">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20FR.png" alt="Nutri-Score pour les jus de fruits">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20FR.png" alt="Nutri-Score pour l'eau">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20FR.png" alt="Nutri-Score pour les boissons sucrées">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20FR.png" alt="Nutri-Score pour le cola sans sucre">
         </div>
     </div>
 
     <h3>Boissons sucrées et aromatisées</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20FR.png" alt="Nutri-Score pour les yaourts à boire">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20FR.png" alt="Dossier de presse Nutri-Score v2">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20FR.png" alt="Nutri-Score pour les yaourts à boire">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20FR.png" alt="Dossier de presse Nutri-Score v2">
         </div>
     </div>
 
     <h3>Huiles</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20FR.png" alt="Nutri-Score pour l'huile d'olive">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20FR.png" alt="Nutri-Score pour l'huile de tournesol">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20FR.png" alt="Nutri-Score pour l'huile d'olive">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20FR.png" alt="Nutri-Score pour l'huile de tournesol">
         </div>
     </div>
 
     <h3>Volaille et poisson</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Poultry%20-%20FR.png" alt="Nutri-Score pour les volailles">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Fatty%20fish%20-%20FR.png" alt="Nutri-Score pour les poissons gras">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Poultry%20-%20FR.png" alt="Nutri-Score pour les volailles">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Fatty%20fish%20-%20FR.png" alt="Nutri-Score pour les poissons gras">
         </div>
     </div>
 
 <!--
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
 -->
